objects/SLC_Target__c.object
<CustomObject>
    <fields>
        <fullName>SLC_EndDate__c</fullName>
        <description>Date target needs to be reached</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SLC_StartDate__c</fullName>
        <description>Target Start Date</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SLC_StretchedTargetP__c</fullName>
        <formula>IF( CONTAINS(RecordType.Name, &apos;BDM&apos;), SLR_BdmHoldingsRollup__c / SLC_StretchedTarget__c,
IF( CONTAINS(RecordType.Name, &apos;CFM&apos;),  SLI_CFMHoldingsRollup__c / SLC_StretchedTarget__c, 0
))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stretched Target %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SLC_StretchedTarget__c</fullName>
        <label>Stretched Target Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SLC_TargetAmount__c</fullName>
        <description>Target Target Amount</description>
        <label>Target Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SLC_TargetPercent__c</fullName>
        <description>Target Target Percent</description>
        <formula>IF( CONTAINS(RecordType.Name, &apos;BDM&apos;), SLR_BdmHoldingsRollup__c / SLC_TargetAmount__c,
IF( CONTAINS(RecordType.Name, &apos;CFM&apos;), SLI_CFMHoldingsRollup__c / SLC_TargetAmount__c,
IF( CONTAINS(RecordType.Name, &apos;Retail&apos;), SLR_AumStrategyRollup__c / SLC_TargetAmount__c, 0
)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Target %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SLC_TargetYear__c</fullName>
        <description>Target Target Year</description>
        <formula>TEXT(YEAR( SLC_EndDate__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Target Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLI_CFMHoldingsRollup__c</fullName>
        <inlineHelpText>SLI_CFMHoldingsRollup</inlineHelpText>
        <label>YTD Change in AUM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SLR_AumStrategyRollup__c</fullName>
        <description>Target Aum Strategy Rollup</description>
        <inlineHelpText>SLR_AumStrategyRollup</inlineHelpText>
        <label>AUM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SLR_BdmHoldingsRollup__c</fullName>
        <description>Target Bdm Holdings Rollup</description>
        <inlineHelpText>SLR_BdmHoldingsRollup</inlineHelpText>
        <label>AUM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SLR_Strategy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Is the Fund Strategy the Target record is allocated</description>
        <label>Franchise</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Targets</relationshipLabel>
        <relationshipName>Targets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Strategy_Text__c</fullName>
        <formula>SLR_Strategy__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Strategy Text</label>
        <type>Text</type>
    </fields>
    <label>Target</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>SLC_TargetYear__c</columns>
        <columns>SLR_BdmHoldingsRollup__c</columns>
        <columns>SLC_TargetAmount__c</columns>
        <columns>SLC_TargetPercent__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>SLI_CfmTargetsListView</fullName>
        <columns>NAME</columns>
        <columns>SLR_Strategy__c</columns>
        <columns>SLC_TargetYear__c</columns>
        <columns>SLR_BdmHoldingsRollup__c</columns>
        <columns>SLC_TargetAmount__c</columns>
        <columns>SLC_StretchedTarget__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>SLC_Target__c.SLI_CFMTarget</value>
        </filters>
        <label>CFM Targets</label>
        <sharedTo>
            <roleAndSubordinatesInternal>STANLIB_AM</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>SLR_BdmTargetsListView</fullName>
        <columns>NAME</columns>
        <columns>SLR_Strategy__c</columns>
        <columns>SLC_TargetYear__c</columns>
        <columns>SLR_BdmHoldingsRollup__c</columns>
        <columns>SLC_TargetAmount__c</columns>
        <columns>SLC_StretchedTarget__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>SLC_Target__c.SLR_BdmTarget</value>
        </filters>
        <label>BDM Targets</label>
        <sharedTo>
            <roleAndSubordinatesInternal>STANLIB_AM</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Target Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Targets</pluralLabel>
    <recordTypes>
        <fullName>SLI_CFMTarget</fullName>
        <active>true</active>
        <description>Target for individual Client Fund Manager users for STANLIB&apos;s Institutional Distribution team</description>
        <label>CFM Target</label>
    </recordTypes>
    <recordTypes>
        <fullName>SLR_BdmTarget</fullName>
        <active>true</active>
        <description>Target for individual Business Development Manager users for STANLIB&apos;s Retail Distribution team</description>
        <label>BDM Target</label>
    </recordTypes>
    <recordTypes>
        <fullName>SLR_StrategyTarget</fullName>
        <active>true</active>
        <description>Targets set against STANLIB Retail Distribution&apos;s Fund Strategies.</description>
        <label>Strategy Target</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>